# gradflow

./: .clang-format  .clang-tidy  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CI_GUIDE.md  CLEANUP_LIST.md  CMakeLists.txt  LICENSE  Makefile.toml  PROGRESS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  conanfile.py  conanfile.txt  cppcheck-report.xml  iwyu-report.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/agents/: github-issue-implementer.md  ml-code-reviewer.md  ml-devops-guardian.md  ml-lib-architect.md  ml-project-conductor.md  orchestrator-devops-innovator.md
.githooks/: README.md  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: benchmarks.yml  ci.yml  code_quality.yml  cuda_tests.yml  metal_tests.yml  python_tests.yml
cmake/: FullScratchMLConfig.cmake.in  GradFlowConfig.cmake.in
cppcheck-html/: 0.html  index.html  stats.html
docs/: API_DESIGN.md  ARCHITECTURE.md  BUILD.md  CI_CD_SETUP.md  CI_SKIPPED_TESTS_RESTORATION.md  CONTRIBUTING.md  DEVELOPMENT.md  ISSUE_10_DESIGN.md  ISSUE_10_IMPLEMENTATION_STRUCTURE.md  ISSUE_10_PREREQUISITES.md  ISSUE_10_SUMMARY.md  ISSUE_10_TEST_STRATEGY.md  ISSUE_11_loss_functions_design.md  ISSUE_13_Phase2_Integration_Design.md  ISSUE_14_metal_device_design.md  ISSUE_15_metal_kernels_design.md  ISSUE_16_memory_pool_design.md  ISSUE_17_metal_autograd_design.md  ISSUE_19_IMPLEMENTATION_TASKS.md  ISSUE_19_cpu_optimization_design.md  ISSUE_9_DESIGN.md  LIBRARY_NAMING.md  LOCAL_CI.md  ROADMAP.md  TECHNICAL_DECISIONS.md
examples/: CMakeLists.txt  matrix_operations.cpp  simple_neural_network.cpp
include/gradflow/: activation.hpp  data_loader.hpp  fullscratch.hpp  loss.hpp  matrix.hpp  neural_network.hpp  optimizer.hpp  vector.hpp
include/gradflow/autograd/: allocator.hpp  device.hpp  memory_pool.hpp  operation.hpp  shape.hpp  storage.hpp  tensor.hpp  variable.hpp
include/gradflow/autograd/cpu/: kernels.hpp
include/gradflow/autograd/metal/: allocator.hpp  device.hpp  grad_kernels.hpp  kernels.hpp
include/gradflow/autograd/ops/: add.hpp  div.hpp  elementwise.hpp  exp.hpp  gelu.hpp  leaky_relu.hpp  log.hpp  log_softmax.hpp  loss.hpp  matmul.hpp  matmul_op.hpp  mul.hpp  op_utils.hpp  pow.hpp  reduction.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  sqrt.hpp  sub.hpp  tanh_op.hpp  variable_ops.hpp
include/gradflow/optim/: adam.hpp  optimizer.hpp  sgd.hpp
python/: CMakeLists.txt  activation_bindings.cpp  bindings.cpp  loss_bindings.cpp  matrix_bindings.cpp  neural_network_bindings.cpp  optimizer_bindings.cpp  pyproject.toml  setup.py  vector_bindings.cpp
python/fullscratch/: __init__.py
python/gradflow/: __init__.py
python/tests/: __init__.py  conftest.py  test_basic.py
scripts/: build.sh  ci-format-apply.sh  ci-format-check.sh  ci-format-cmake.sh  ci-lint-cpp.sh  ci-lint-python.sh  ci-test-cpp.sh  ci-test-python.sh  ci-verify.sh  cleanup.sh  rename-directory.sh  run-ci-local.sh  setup-git-hooks.sh
src/: CMakeLists.txt
src/autograd/: device.cpp  memory_pool.cpp
src/autograd/cpu/: kernels_avx2.cpp  matmul_blocked.cpp  simd_ops.hpp
src/autograd/metal/: allocator.mm  device.mm  grad_kernels.metal  grad_kernels.mm  kernels.metal  kernels.mm  metal_device_impl.hpp
tests/: .clang-tidy  CMakeLists.txt  test_activation.cpp  test_activation_ops.cpp  test_cpu_optimized.cpp  test_data_loader.cpp  test_device.cpp  test_integration.cpp  test_loss.cpp  test_loss_grad.cpp  test_matrix.cpp  test_memory_pool.cpp  test_metal_device.cpp  test_metal_kernels.cpp  test_metal_ops_grad.cpp  test_neural_network.cpp  test_operation.cpp  test_ops.cpp  test_ops_grad.cpp  test_optimizer.cpp  test_phase1_integration.cpp  test_phase2_integration.cpp  test_phase3_integration.cpp  test_shape.cpp  test_storage.cpp  test_tensor.cpp  test_variable.cpp  test_vector.cpp
