[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fullscratchml"
version = "0.1.0"
description = "A comprehensive C++ machine learning library with Python bindings"
readme = "../README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FullScratchML Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fullScratchLibs"
Repository = "https://github.com/yourusername/fullScratchLibs"
